🐛 fix: fixed layout bug in share page

--- a/src/pages/ResultPage/style.scss
+++ b/src/pages/ResultPage/style.scss
@@ -96,7 +96,7 @@
 
       .flag {
         position: absolute;
-        top: 240px;
+        top: 220px;
         right: 19px;
         width: 73px;
         height: 93px;
@@ -251,6 +251,7 @@
      .arrow {
        float: right;
        width: 507px;
+       margin: 20px 26px 0 0;
      }
 
       .save-it {
